add sales module (#1)
* add sales module

* fix copilot PR commits

* fix migration copy

* fix swagger copy

* fix swagger copy
